--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Радужный кот</h1>
-<img src="/img/img1_rainbow_cat.jpg" alt="абсолютный путь">
+<img src="../img/img1_rainbow_cat.jpg" alt="абсолютный путь">
 <p>питается скитлсом</p>
 <img src="../img/img2_skittles.jpg" alt="относительный путь">
 
